# logic_gate

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  tests.rs
src/bytes/: fourbit.rs  mod.rs
src/gates/: adder.rs  alu.rs  alu1.rs  alu4way.rs  and.rs  and3.rs  and3way.rs  demux.rs  fourbitadder.rs  mod.rs  mux.rs  mux4.rs  mux4way.rs  nand.rs  nor.rs  not.rs  or.rs  xor.rs
