[package]
name = "logic-gates"
version = "0.1.0"
edition = "2021"
authors = ["Hakan Vardar"]
description = "Logic Gates"
license = "MIT"
repository = "https://github.com/HakanVardarr/logic-gates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
