[package]
name = "logic_gate"
version = "0.4.0"
edition = "2021"
authors = ["Hakan Vardar"]
description = "Logic Gates"
license = "MIT"
repository = "https://github.com/HakanVardarr/logic-gates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
